--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <tr>
   <td style="padding:16px;width:20%;vertical-align:middle">
     <video width="100%" autoplay loop muted playsinline>
-      <source src="images/SyncTwin-video.mp4" type="video/mp4">
+      <source src="images/SyncTwin.mp4" type="video/mp4">
     </video>
   </td>
 
@@ -86,7 +86,8 @@
     <br>
     <em>CVPR</em>, 2026 &nbsp; <strong>(Under Review)</strong>
     <br>
-    <a href="data/SyncTwin.pdf">paper</a>
+    <a href="data/SyncTwin.pdf">paper</a> / 
+    <a href="data/SyncTwin-video.mp4">video</a>
     <p>
       We present SyncTwin, a fast digital twin construction and synchronization framework
       for safe robotic grasping in dynamic and partially observed environments.
