--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       Energy-Aware Planning for Legged Robots Performing Logistics Tasks in Agriculture Applications
     </span>
     <br>
-    Shengqiang Chen, <strong>Ruopeng Huang</strong>, Yiyu Chen, Zishen Wei,
+    Shengqiang Chen,  Yiyu Chen, <strong>Ruopeng Huang</strong>,Zishen Wei,
     Quan Nguyen, Satyandra K. Gupta
     <br>
     <em>IEEE Transactions on Automation Science and Engineering (T-ASE)</em>, 2025 &nbsp;
