--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
+    <!-- Privacy-friendly analytics by Plausible -->
+  <script async src="https://plausible.io/js/pa-L3ij8YVcDlb7ayijeOK55.js"></script>
+  <script>
+    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+    plausible.init()
+  </script>
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>Ruopeng Huang</title>
