--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     <strong>Ruopeng Huang</strong>, Boyu Yang, Wenlong Gui, Jeremy Morgan,
     Erdem Biyik, Jiachen Li
     <br>
-    <em>CVPR</em>, 2026 &nbsp; <strong>(Under Review)</strong>
+    <strong>(Under Review)</strong>
+    <!--<em>CVPR</em>, 2026 &nbsp; <strong>(Under Review)</strong>-->
     <br>
     <a href="data/SyncTwin.pdf">paper</a> / 
     <a href="data/SyncTwin-video.mp4">video</a>
@@ -115,7 +116,8 @@
      Mingxuan Yan*, <strong>Ruopeng Huang*</strong>,Litian Gong,
     Zechun Liu, Jiachen Li
     <br>
-    <em>RSS</em>, 2026 &nbsp; <strong>(In Preparation)</strong>
+    <strong>(In Preparation)</strong>
+    <!--<em>RSS</em>, 2026 &nbsp; <strong>(In Preparation)</strong>-->
     <br>
    
     <p>
