--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <strong>(Under Review)</strong>
     <!--<em>CVPR</em>, 2026 &nbsp; <strong>(Under Review)</strong>-->
     <br>
-    <a href="data/SyncTwin.pdf">paper</a> / 
+    <a href="https://arxiv.org/abs/2601.09920">paper</a> / 
+   <!-- <a href="data/SyncTwin.pdf">paper</a> / -->
     <a href="data/SyncTwin-video.mp4">video</a>
     <p>
       We present SyncTwin, a fast digital twin construction and synchronization framework
