--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
     <!--<em>CVPR</em>, 2026 &nbsp; <strong>(Under Review)</strong>-->
     <br>
     <a href="https://arxiv.org/abs/2601.09920">paper</a> / 
-   <!-- <a href="data/SyncTwin.pdf">paper</a> / -->
-    <a href="data/SyncTwin-video.mp4">video</a>
+   <!-- <a href="data/SyncTwin.pdf">paper</a> / 
+    <a href="data/SyncTwin-video.mp4">video</a>-->
+     <a href="https://sync-twin.github.io/">project page</a>  
     <p>
       We present SyncTwin, a fast digital twin construction and synchronization framework
       for safe robotic grasping in dynamic and partially observed environments.
