--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <td style="padding:8px;width:80%;vertical-align:middle">
     <span class="papertitle">
-      SyncTwin: Fast Digital Twin Construction and Synchronization for Safe Robotic Grasping
+      SyncTwin: Fast Digital Twin Construction and Synchronization for Safe Robotic Manipulation
     </span>
     <br>
     <strong>Ruopeng Huang</strong>, Boyu Yang, Wenlong Gui, Jeremy Morgan,
